# db-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  WORK_LOG.md  package-lock.json  pyproject.toml
.claude/: settings.local.json
blocks/: tui.md
docs/: CNAME  api-connector-duckdb-cleanup.md  api-connectors.md  architecture-review.md  collaboration.md  connector-plugins.md  connector-profiles.md  connector-templates.md  daemon-knowledge-loop.md  data-gateway.md  datamcp-fsm-runtime-note.md  datamcp-p0-product-contract.md  datamcp-semantic-importer-contract.md  datamcp-v1-execution-plan.md  datamcp-v1-first-slice.md  electron-port-feasibility.md  gitbook-gap-analysis-and-enhancement-plan.md  index.html  knowledge-extraction-agent.md  knowledge-gaps.md  knowledge-patterns-standardization.md  knowledge-pipeline.md  metabase-lens-execute-sql-debug.md  metrics-dimensions-discovery.md  metrics-layer.md  migrations.md  miner.md  pluggable-gateway-planning.md  query-store.md  refactor-plan-phase9.md  session-id-spans.md  structural-cleanup-plan.md  testing.md  tui-design.md  tui-implementation.md  ui-architecture-baseline.md  ui-bicp-roadmap.md  ui-enhancements-spec.md  ui-spec.md  vault-write-unification.md  (+1 more)
gitbook/: README.md  SUMMARY.md  advanced-topics.md  connector-profiles.md  how-to-guides.md  install-and-configuration.md  quickstart.md  tools-reference.md  using-cli.md  using-web-ui.md  working-with-agents.md
releases/: v0.4.37.md  v0.4.38.md  v0.4.39.md  v0.4.40.md  v0.4.41.md  v0.4.42.md  v0.4.43.md  v0.4.44.md  v0.4.45.md
scripts/: check_version_consistency.py  dev.sh  install.sh  (+4 more)
(+90 files in other folders)
