[project]
name = "db-mcp-workspace"
version = "0.3.0"
description = "Database MCP server workspace"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["packages/core", "packages/models"]

[tool.uv.sources]
db-mcp = { workspace = true }
db-mcp-models = { workspace = true }

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
